tests/snapshots/table_occurrences/fmSyntaxColorizer/Home_MBS_DeveloperOptions - ID 1065153.xml.snap
---
source: src/main.rs
expression: output_content
---
<TableOccurrence viewState="Collapse" height="72" id="1065153" name="Home.MBS_DeveloperOptions" type="Local">
	<UUID modifications="17" userName="Rus Master" accountName="admin" timestamp="2021-11-04T15:56:22">D534749E-0046-488A-B348-834F70D376C4</UUID>
	<BaseTableSourceReference type="BaseTableReference">
		<BaseTableReference id="140" name="_MBS_DeveloperOptions"></BaseTableReference>
	</BaseTableSourceReference>
	<CoordRect top="219" left="385" bottom="337" right="631"></CoordRect>
	<Color red="119" green="119" blue="119" alpha="1.00"></Color>
</TableOccurrence>
