tests/snapshots/table_occurrences/fmSyntaxColorizer/Home_Syntax_Dynamic1_Palette_Color_VL - ID 1065159.xml.snap
---
source: src/main.rs
expression: output_content
---
<TableOccurrence viewState="Collapse" height="36" id="1065159" name="Home.Syntax_Dynamic1.Palette.Color_VL" type="Local">
	<UUID modifications="16" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">748F6737-5011-45AD-9B8D-5EC2BB0CD2DE</UUID>
	<BaseTableSourceReference type="BaseTableReference">
		<BaseTableReference id="132" name="_Color"></BaseTableReference>
	</BaseTableSourceReference>
	<CoordRect top="140" left="711" bottom="234" right="953"></CoordRect>
	<Color red="119" green="119" blue="119" alpha="1.00"></Color>
</TableOccurrence>
