tests/snapshots/table_occurrences/fmSyntaxColorizer/Home_Syntax_Dynamic2 - ID 1065156.xml.snap
---
source: src/main.rs
expression: output_content
---
<TableOccurrence viewState="Collapse" height="38" id="1065156" name="Home.Syntax_Dynamic2" type="Local">
	<UUID modifications="18" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">53F625C1-4C07-42D6-B391-19611C22EBE6</UUID>
	<BaseTableSourceReference type="BaseTableReference">
		<BaseTableReference id="133" name="_Syntax"></BaseTableReference>
	</BaseTableSourceReference>
	<CoordRect top="143" left="387" bottom="249" right="629"></CoordRect>
	<Color red="119" green="119" blue="119" alpha="1.00"></Color>
</TableOccurrence>
