tests/snapshots/table_occurrences/fmSyntaxColorizer/Home_Syntax_Dynamic4 - ID 1065158.xml.snap
---
source: src/main.rs
expression: output_content
---
<TableOccurrence viewState="Collapse" height="38" id="1065158" name="Home.Syntax_Dynamic4" type="Local">
	<UUID modifications="17" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">82482622-4DEA-481D-866F-ACDB8697E8B4</UUID>
	<BaseTableSourceReference type="BaseTableReference">
		<BaseTableReference id="133" name="_Syntax"></BaseTableReference>
	</BaseTableSourceReference>
	<CoordRect top="194" left="387" bottom="300" right="629"></CoordRect>
	<Color red="119" green="119" blue="119" alpha="1.00"></Color>
</TableOccurrence>
