tests/snapshots/table_occurrences/fmSyntaxColorizer/Home_Syntax_Palette_Active - ID 1065146.xml.snap
---
source: src/main.rs
expression: output_content
---
<TableOccurrence viewState="Related" height="84" id="1065146" name="Home.Syntax.Palette_Active" type="Local">
	<UUID modifications="7" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">1EBEBF52-CF98-4FEC-A209-4BE86FB241FF</UUID>
	<BaseTableSourceReference type="BaseTableReference">
		<BaseTableReference id="135" name="_Palette"></BaseTableReference>
	</BaseTableSourceReference>
	<CoordRect top="15" left="705" bottom="51" right="912"></CoordRect>
	<Color red="119" green="119" blue="119" alpha="1.00"></Color>
</TableOccurrence>
