tests/snapshots/table_occurrences/fmSyntaxColorizer/MBS_DeveloperOptions_Self_Renumber - ID 1065164.xml.snap
---
source: src/main.rs
expression: output_content
---
<TableOccurrence viewState="Related" height="74" id="1065164" name="MBS_DeveloperOptions.Self_Renumber" type="Local">
	<UUID modifications="12" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">48482B90-8DC5-49D3-A73E-895F7E04F0D3</UUID>
	<BaseTableSourceReference type="BaseTableReference">
		<BaseTableReference id="140" name="_MBS_DeveloperOptions"></BaseTableReference>
	</BaseTableSourceReference>
	<CoordRect top="858" left="1412" bottom="976" right="1637"></CoordRect>
	<Color red="120" green="120" blue="120" alpha="1.00"></Color>
</TableOccurrence>
