tests/snapshots/table_occurrences/fmSyntaxColorizer/Palette.Color_Formula - ID 1065127.xml.snap
---
source: src/main.rs
expression: output_content
---
<TableOccurrence viewState="Related" height="12" id="1065127" name="Palette.Color_Formula" type="Local">
	<UUID modifications="22" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">07876FDD-8F41-47E7-ACFD-98528FF129F2</UUID>
	<BaseTableSourceReference type="BaseTableReference">
		<BaseTableReference id="132" name="_Color"></BaseTableReference>
	</BaseTableSourceReference>
	<CoordRect top="165" left="1415" bottom="213" right="1638"></CoordRect>
	<Color red="119" green="119" blue="119" alpha="1.00"></Color>
</TableOccurrence>
