tests/snapshots/table_occurrences/fmSyntaxColorizer/Palette.Color_Script - ID 1065126.xml.snap
---
source: src/main.rs
expression: output_content
---
<TableOccurrence viewState="Related" height="12" id="1065126" name="Palette.Color_Script" type="Local">
	<UUID modifications="23" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">A58E69FB-714B-4862-995A-C8AE925C1B75</UUID>
	<BaseTableSourceReference type="BaseTableReference">
		<BaseTableReference id="132" name="_Color"></BaseTableReference>
	</BaseTableSourceReference>
	<CoordRect top="105" left="1415" bottom="153" right="1638"></CoordRect>
	<Color red="119" green="119" blue="119" alpha="1.00"></Color>
</TableOccurrence>
