tests/snapshots/table_occurrences/fmSyntaxColorizer/Palette.Palette_SwitchDarkLight - ID 1065166.xml.snap
---
source: src/main.rs
expression: output_content
---
<TableOccurrence viewState="Related" height="38" id="1065166" name="Palette.Palette_SwitchDarkLight" type="Local">
	<UUID modifications="8" userName="R.Watson" accountName="admin" timestamp="2021-09-24T09:37:45">1B1E73B8-B04D-4C58-8ACD-5B23FCD97679</UUID>
	<BaseTableSourceReference type="BaseTableReference">
		<BaseTableReference id="135" name="_Palette"></BaseTableReference>
	</BaseTableSourceReference>
	<CoordRect top="322" left="1415" bottom="404" right="1638"></CoordRect>
	<Color red="119" green="119" blue="119" alpha="1.00"></Color>
</TableOccurrence>
