tests/snapshots/table_occurrences/fmSyntaxColorizer/Palette_Color_OnlyPaletteSpecificColors - ID 1065145.xml.snap
---
source: src/main.rs
expression: output_content
---
<TableOccurrence viewState="Collapse" height="12" id="1065145" name="Palette.Color_OnlyPaletteSpecificColors" type="Local">
	<UUID modifications="13" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">DA10055E-FBCB-4893-867D-C9B2ACF349DE</UUID>
	<BaseTableSourceReference type="BaseTableReference">
		<BaseTableReference id="132" name="_Color"></BaseTableReference>
	</BaseTableSourceReference>
	<CoordRect top="76" left="1415" bottom="94" right="1638"></CoordRect>
	<Color red="119" green="119" blue="119" alpha="1.00"></Color>
</TableOccurrence>
