tests/snapshots/table_occurrences/fmSyntaxColorizer/Palette_Palette_SameName - ID 1065136.xml.snap
---
source: src/main.rs
expression: output_content
---
<TableOccurrence viewState="Related" height="24" id="1065136" name="Palette.Palette_SameName" type="Local">
	<UUID modifications="16" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">2B50300B-BC51-4095-AA32-881D4CFE90CF</UUID>
	<BaseTableSourceReference type="BaseTableReference">
		<BaseTableReference id="135" name="_Palette"></BaseTableReference>
	</BaseTableSourceReference>
	<CoordRect top="272" left="1415" bottom="308" right="1638"></CoordRect>
	<Color red="119" green="119" blue="119" alpha="1.00"></Color>
</TableOccurrence>
