tests/snapshots/table_occurrences/fmSyntaxColorizer/Syntax.Color_active - ID 1065141.xml.snap
---
source: src/main.rs
expression: output_content
---
<TableOccurrence viewState="Related" height="0" id="1065141" name="Syntax.Color_active" type="Local">
	<UUID modifications="12" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">11129895-EF11-435D-B1CA-4343E5DA5AF2</UUID>
	<BaseTableSourceReference type="BaseTableReference">
		<BaseTableReference id="132" name="_Color"></BaseTableReference>
	</BaseTableSourceReference>
	<CoordRect top="516" left="382" bottom="576" right="624"></CoordRect>
	<Color red="119" green="119" blue="119" alpha="1.00"></Color>
</TableOccurrence>
